# onireader

./: .gitignore  CMakeLists.txt  README.md  setup.py
cmake/: FindOpenNI2.cmake
onireader/: CMakeLists.txt  __init__.py  _onireader.cpp
test/: test.py
